--- a/easyrecyclerview/build.gradle
+++ b/easyrecyclerview/build.gradle
@@ -44,5 +44,5 @@ ext {
     licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
     allLicenses = ["Apache-2.0"]
 }
-apply from:'https://raw.githubusercontent.com/Jude95/JCenter/master/install.gradle'
-apply from:'https://raw.githubusercontent.com/Jude95/JCenter/master/bintray.gradle'
+//apply from:'https://raw.githubusercontent.com/Jude95/JCenter/master/install.gradle'
+//apply from:'https://raw.githubusercontent.com/Jude95/JCenter/master/bintray.gradle'
