--- a/easyrecyclerview/build.gradle
+++ b/easyrecyclerview/build.gradle
@@ -19,7 +19,7 @@ android {
 }
 
 dependencies {
-    provided 'com.android.support:recyclerview-v7:26.0.0'
+    provided 'androidx.recyclerview:recyclerview:1.0.0'
 }
 ext {
     bintrayRepo = 'maven'
